--- a/day_1/titanic_eda.ipynb
+++ b/day_1/titanic_eda.ipynb
@@ -73,23 +73,163 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Первые 5 строк датасета:\n",
-            "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
-            "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
-            "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
-            "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
-            "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
-            "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
             "\n",
-            "     who  adult_male deck  embark_town alive  alone  \n",
-            "0    man        True  NaN  Southampton    no  False  \n",
-            "1  woman       False    C    Cherbourg   yes  False  \n",
-            "2  woman       False  NaN  Southampton   yes   True  \n",
-            "3  woman       False    C  Southampton   yes  False  \n",
-            "4    man        True  NaN  Southampton    no   True  \n",
-            "\n",
-            "Размер датасета: 891 пассажиров, 15 признаков\n"
+            "Размер датасета: 891 пассажиров, 15 признаков\n",
+            "Первые 5 строк датасета:\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>survived</th>\n",
+              "      <th>pclass</th>\n",
+              "      <th>sex</th>\n",
+              "      <th>age</th>\n",
+              "      <th>sibsp</th>\n",
+              "      <th>parch</th>\n",
+              "      <th>fare</th>\n",
+              "      <th>embarked</th>\n",
+              "      <th>class</th>\n",
+              "      <th>who</th>\n",
+              "      <th>adult_male</th>\n",
+              "      <th>deck</th>\n",
+              "      <th>embark_town</th>\n",
+              "      <th>alive</th>\n",
+              "      <th>alone</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>male</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.2500</td>\n",
+              "      <td>S</td>\n",
+              "      <td>Third</td>\n",
+              "      <td>man</td>\n",
+              "      <td>True</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>no</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>female</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>71.2833</td>\n",
+              "      <td>C</td>\n",
+              "      <td>First</td>\n",
+              "      <td>woman</td>\n",
+              "      <td>False</td>\n",
+              "      <td>C</td>\n",
+              "      <td>Cherbourg</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>female</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.9250</td>\n",
+              "      <td>S</td>\n",
+              "      <td>Third</td>\n",
+              "      <td>woman</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>female</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>53.1000</td>\n",
+              "      <td>S</td>\n",
+              "      <td>First</td>\n",
+              "      <td>woman</td>\n",
+              "      <td>False</td>\n",
+              "      <td>C</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>male</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8.0500</td>\n",
+              "      <td>S</td>\n",
+              "      <td>Third</td>\n",
+              "      <td>man</td>\n",
+              "      <td>True</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>no</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+              "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
+              "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+              "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
+              "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
+              "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+              "\n",
+              "     who  adult_male deck  embark_town alive  alone  \n",
+              "0    man        True  NaN  Southampton    no  False  \n",
+              "1  woman       False    C    Cherbourg   yes  False  \n",
+              "2  woman       False  NaN  Southampton   yes   True  \n",
+              "3  woman       False    C  Southampton   yes  False  \n",
+              "4    man        True  NaN  Southampton    no   True  "
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -97,9 +237,9 @@
         "df = sns.load_dataset('titanic')\n",
         "\n",
         "# Посмотрим на первые строки\n",
+        "print(f\"\\nРазмер датасета: {df.shape[0]} пассажиров, {df.shape[1]} признаков\")\n",
         "print(\"Первые 5 строк датасета:\")\n",
-        "print(df.head())\n",
-        "print(f\"\\nРазмер датасета: {df.shape[0]} пассажиров, {df.shape[1]} признаков\")\n"
+        "df.head()\n"
       ]
     },
     {
@@ -146,52 +286,36 @@
             " 13  alive        891 non-null    object  \n",
             " 14  alone        891 non-null    bool    \n",
             "dtypes: bool(2), category(2), float64(2), int64(4), object(5)\n",
-            "memory usage: 80.7+ KB\n",
-            "None\n",
-            "\n",
-            "============================================================\n",
-            "\n",
-            "Описание признаков:\n",
-            "- survived: выжил (1) или нет (0) - ЦЕЛЕВАЯ ПЕРЕМЕННАЯ\n",
-            "- pclass: класс билета (1 = первый, 2 = второй, 3 = третий)\n",
-            "- sex: пол пассажира\n",
-            "- age: возраст в годах\n",
-            "- sibsp: количество siblings/spouses (братьев/сестер/супругов) на борту\n",
-            "- parch: количество parents/children (родителей/детей) на борту\n",
-            "- fare: стоимость билета\n",
-            "- embarked: порт посадки (C = Cherbourg, Q = Queenstown, S = Southampton)\n",
-            "- class: дублирует pclass в текстовом виде\n",
-            "- who: man, woman, child\n",
-            "- adult_male: является ли взрослым мужчиной\n",
-            "- deck: палуба каюты\n",
-            "- embark_town: город посадки\n",
-            "- alive: yes/no (дублирует survived)\n",
-            "- alone: путешествовал ли один\n"
+            "memory usage: 80.7+ KB\n"
           ]
         }
       ],
       "source": [
         "# Информация о датасете\n",
         "print(\"Информация о типах данных и пропусках:\")\n",
-        "print(df.info())\n",
-        "\n",
-        "print(\"\\n\" + \"=\"*60)\n",
-        "print(\"\\nОписание признаков:\")\n",
-        "print(\"- survived: выжил (1) или нет (0) - ЦЕЛЕВАЯ ПЕРЕМЕННАЯ\")\n",
-        "print(\"- pclass: класс билета (1 = первый, 2 = второй, 3 = третий)\")\n",
-        "print(\"- sex: пол пассажира\")\n",
-        "print(\"- age: возраст в годах\")\n",
-        "print(\"- sibsp: количество siblings/spouses (братьев/сестер/супругов) на борту\")\n",
-        "print(\"- parch: количество parents/children (родителей/детей) на борту\")\n",
-        "print(\"- fare: стоимость билета\")\n",
-        "print(\"- embarked: порт посадки (C = Cherbourg, Q = Queenstown, S = Southampton)\")\n",
-        "print(\"- class: дублирует pclass в текстовом виде\")\n",
-        "print(\"- who: man, woman, child\")\n",
-        "print(\"- adult_male: является ли взрослым мужчиной\")\n",
-        "print(\"- deck: палуба каюты\")\n",
-        "print(\"- embark_town: город посадки\")\n",
-        "print(\"- alive: yes/no (дублирует survived)\")\n",
-        "print(\"- alone: путешествовал ли один\")\n"
+        "df.info()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Описание признаков:\n",
+        "- survived: выжил (1) или нет (0) - **ЦЕЛЕВАЯ ПЕРЕМЕННАЯ**\n",
+        "- pclass: класс билета (1 = первый, 2 = второй, 3 = третий)\n",
+        "- sex: пол пассажира\n",
+        "- age: возраст в годах\n",
+        "- sibsp: количество siblings/spouses (братьев/сестер/супругов) на борту\n",
+        "- parch: количество parents/children (родителей/детей) на борту\n",
+        "- fare: стоимость билета\n",
+        "- embarked: порт посадки (C = Cherbourg, Q = Queenstown, S = Southampton)\n",
+        "- class: дублирует pclass в текстовом виде\n",
+        "- who: man, woman, child\n",
+        "- adult_male: является ли взрослым мужчиной\n",
+        "- deck: палуба каюты\n",
+        "- embark_town: город посадки\n",
+        "- alive: yes/no (дублирует survived)\n",
+        "- alone: путешествовал ли один"
       ]
     },
     {
@@ -884,7 +1008,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "🔄 Обучаем модель...\n",
+            "🔄 Обучаем модель...\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "✅ Модель обучена!\n",
             "\n",
             "Пример предсказаний (первые 10):\n",
@@ -1189,9 +1319,7 @@
         "**Полезные ссылки:**\n",
         "- [Kaggle Titanic Competition](https://www.kaggle.com/c/titanic)\n",
         "- [Документация Scikit-learn](https://scikit-learn.org/)\n",
-        "- [Pandas Documentation](https://pandas.pydata.org/)\n",
-        "\n",
-        "**Удачи в изучении Machine Learning! 🎓✨**\n"
+        "- [Pandas Documentation](https://pandas.pydata.org/)\n"
       ]
     }
   ],
