--- a/day_3/dzen.ipynb
+++ b/day_3/dzen.ipynb
@@ -2500,6 +2500,189 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ab1d0c8",
+   "metadata": {},
+   "source": [
+    "# Alternative Solutions\n",
+    "\n",
+    "We will implement three additional approaches:\n",
+    "1. **LSTM Sentence Embeddings**: Train LSTM to encode sentences, use last hidden state\n",
+    "2. **TextCNN**: Multiple convolutions with different kernel sizes for sentence encoding\n",
+    "3. **Word2Vec + Averaging**: Train Word2Vec, average token embeddings\n",
+    "\n",
+    "All approaches use a siamese architecture with concatenated embeddings.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cd6c399",
+   "metadata": {},
+   "source": [
+    "## Data Preparation: Tokenization and Vocabulary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c5e184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple tokenizer for Russian text\n",
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "def simple_tokenize(text):\n",
+    "    \"\"\"Simple tokenization: lowercase, remove punctuation, split\"\"\"\n",
+    "    if pd.isna(text):\n",
+    "        return []\n",
+    "    text = text.lower()\n",
+    "    # Keep only letters and spaces\n",
+    "    text = re.sub(r'[^а-яёa-z\\s]', ' ', text)\n",
+    "    # Split and filter empty tokens\n",
+    "    tokens = [t for t in text.split() if t]\n",
+    "    return tokens\n",
+    "\n",
+    "# Test tokenizer\n",
+    "sample_title = df.iloc[0]['title']\n",
+    "print(f\"Original: {sample_title}\")\n",
+    "print(f\"Tokenized: {simple_tokenize(sample_title)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b71846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build vocabulary from all titles\n",
+    "print(\"Tokenizing all titles...\")\n",
+    "all_tokens = []\n",
+    "for title in tqdm(df['title'].fillna(''), desc=\"Tokenizing\"):\n",
+    "    all_tokens.extend(simple_tokenize(title))\n",
+    "\n",
+    "print(f\"\\nTotal tokens: {len(all_tokens)}\")\n",
+    "\n",
+    "# Count token frequencies\n",
+    "token_counts = Counter(all_tokens)\n",
+    "print(f\"Unique tokens: {len(token_counts)}\")\n",
+    "\n",
+    "# Build vocabulary with minimum frequency\n",
+    "MIN_FREQ = 2\n",
+    "vocab = {'<PAD>': 0, '<UNK>': 1}  # Special tokens\n",
+    "for token, count in token_counts.items():\n",
+    "    if count >= MIN_FREQ:\n",
+    "        vocab[token] = len(vocab)\n",
+    "\n",
+    "print(f\"Vocabulary size (min_freq={MIN_FREQ}): {len(vocab)}\")\n",
+    "print(f\"Most common tokens: {token_counts.most_common(20)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19a37690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to convert text to sequence of indices\n",
+    "def text_to_sequence(text, vocab, max_length=50):\n",
+    "    \"\"\"Convert text to padded sequence of token indices\"\"\"\n",
+    "    tokens = simple_tokenize(text)\n",
+    "    # Convert to indices\n",
+    "    indices = [vocab.get(token, vocab['<UNK>']) for token in tokens]\n",
+    "    # Pad or truncate\n",
+    "    if len(indices) < max_length:\n",
+    "        indices = indices + [vocab['<PAD>']] * (max_length - len(indices))\n",
+    "    else:\n",
+    "        indices = indices[:max_length]\n",
+    "    return indices\n",
+    "\n",
+    "# Test\n",
+    "sample_seq = text_to_sequence(sample_title, vocab, max_length=20)\n",
+    "print(f\"Sequence: {sample_seq}\")\n",
+    "print(f\"Length: {len(sample_seq)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "277a13b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create mapping from itemId to sequence\n",
+    "MAX_LENGTH = 50\n",
+    "print(f\"Converting all titles to sequences (max_length={MAX_LENGTH})...\")\n",
+    "\n",
+    "item_to_sequence = {}\n",
+    "for _, row in tqdm(df.iterrows(), total=len(df), desc=\"Converting\"):\n",
+    "    item_to_sequence[row['itemId']] = text_to_sequence(row['title'], vocab, MAX_LENGTH)\n",
+    "\n",
+    "print(f\"Total items converted: {len(item_to_sequence)}\")\n",
+    "\n",
+    "# Verify conversion\n",
+    "sample_item_id = df.iloc[0]['itemId']\n",
+    "print(f\"Sample sequence for item {sample_item_id}: {item_to_sequence[sample_item_id][:10]}...\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ce2b6f5",
+   "metadata": {},
+   "source": [
+    "## Solution 2: LSTM Sentence Embeddings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf3afcec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5929a0b0",
+   "metadata": {},
+   "source": [
+    "## Solution 3: TextCNN\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df8c4580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a83f621",
+   "metadata": {},
+   "source": [
+    "## Solution 4: Word2Vec + Averaging\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd6f3f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
   }
  ],
  "metadata": {
